syntax = "proto3";
import "google/protobuf/empty.proto";
import "component_proto/scene_comp.proto";
option cc_generic_services = true;


message GsEnterSceneRequest
{
  uint64 session_id = 1;
  uint64 scene_id = 2;
}


message GsLeaveSceneRequest
{
  bool change_gs = 1;
}


message EnterSceneS2CRequest
{
}

message EnterScenerS2CResponse
{
}

service GameServerPlayerSceneService 
{
  rpc EnterScene (GsEnterSceneRequest) returns (google.protobuf.Empty);
  rpc LeaveScene (GsLeaveSceneRequest) returns (google.protobuf.Empty);
  rpc EnterSceneS2C (EnterSceneS2CRequest) returns (EnterScenerS2CResponse);
}